# source2-demo

./: .env  .gitignore  .rustfmt.toml  Cargo.toml  README.md
d2-examples/: Cargo.toml
d2-examples/chat/src/: main.rs
d2-examples/combatlog/: Cargo.toml
d2-examples/combatlog/src/: main.rs
d2-examples/lifestate/src/: main.rs
d2-examples/wards/: Cargo.toml
d2-examples/wards/src/: main.rs  wards.rs
d2-stampede/: Cargo.toml  LICENSE-MIT  README.md
d2-stampede-examples/: Cargo.toml
d2-stampede-examples/chat/: Cargo.toml
d2-stampede-examples/chat/src/: bc.rs  main.rs
d2-stampede-examples/combatlog/: Cargo.toml
d2-stampede-examples/combatlog/src/: main.rs
d2-stampede-examples/empty/: Cargo.toml
d2-stampede-examples/empty/src/: main.rs
d2-stampede-examples/examples/chat/: Cargo.toml
d2-stampede-examples/examples/chat/src/: main.rs
d2-stampede-examples/examples/combatlog/: Cargo.toml
d2-stampede-examples/examples/combatlog/src/: main.rs
d2-stampede-examples/examples/empty/: Cargo.toml
d2-stampede-examples/examples/empty/src/: main.rs
d2-stampede-examples/examples/lifestate/: Cargo.toml
d2-stampede-examples/examples/lifestate/src/: main.rs
d2-stampede-examples/examples/wards/: Cargo.toml
d2-stampede-examples/examples/wards/src/: main.rs  wards.rs
d2-stampede-examples/lifestate/: Cargo.toml
d2-stampede-examples/lifestate/src/: main.rs
d2-stampede-examples/wards/: Cargo.toml
d2-stampede-examples/wards/src/: main.rs
d2-stampede-macros/: Cargo.toml
d2-stampede-macros/src/: lib.rs  protobuf_map.rs
d2-stampede-observers/: Cargo.toml
d2-stampede-observers/src/: chat.rs  game_state.rs  game_time.rs  lib.rs  players.rs  wards.rs
d2-stampede-protobufs/: Cargo.toml  build.rs  generated.rs  lib.rs
d2-stampede/src/: class.rs  combat_log.rs  decoder.rs  entity.rs  field.rs  field_reader.rs  field_value.rs  lib.rs  parser.rs  reader.rs  serializer.rs  string_table.rs
dl-examples/: Cargo.toml
dl-examples/chat/: Cargo.toml
dl-examples/chat/src/: main.rs
dl-examples/damage-events/: Cargo.toml
dl-examples/damage-events/src/: main.rs
dl-examples/death-events/: Cargo.toml
dl-examples/death-events/src/: main.rs
dl-examples/lifestate/: Cargo.toml
dl-examples/lifestate/src/: main.rs
dl-examples/match-details/: Cargo.toml
dl-examples/match-details/src/: main.rs
dl-examples/src/: main.rs
examples/: cargo.toml
examples/src/: main.rs
proto/: Cargo.toml  build.rs  lib.rs
proto/src/: lib.rs  proto.rs
source2-demo/: Cargo.toml
source2-demo-examples/chat/: Cargo.toml
source2-demo-examples/chat/src/: main.rs
source2-demo-examples/combatlog/: Cargo.toml
source2-demo-examples/dl-examples/: Cargo.toml
source2-demo-examples/dl-examples/src/: main.rs
source2-demo-examples/wards/: Cargo.toml
source2-demo-macros/: .rustfmt.toml  Cargo.toml
source2-demo-macros/src/: lib.rs  protobuf_map.rs
source2-demo-protobufs/: Cargo.toml  build.rs  citadel.rs  common.rs  dota.rs  lib.rs
source2-demo/src/: baseline.rs  decoder.rs  display.rs  entity.rs  error.rs  field.rs  field_reader.rs  field_value.rs  game_event.rs  lib.rs  macros.rs  parser.rs  reader.rs  serializer.rs  string_table.rs
source2-demo/src/entity/: baseline.rs  class.rs  container.rs  entity.rs  mod.rs
source2-demo/src/entity/field/: decoder.rs  encoder.rs  field.rs  mod.rs  model.rs  path.rs  properties.rs  reader.rs  serializer.rs  state.rs  type.rs  value.rs
source2-demo/src/event/: combat_log.rs  definition.rs  game_event.rs  list.rs  mod.rs  value.rs
source2-demo/src/parser/: context.rs  mod.rs  observer.rs  parser.rs
source2-demo/src/parser/demo/: commands.rs  messages.rs  mod.rs  runner.rs  svc.rs
source2-demo/src/reader/: bits.rs  mod.rs  msg.rs
source2-demo/src/reader/field/: huff.rs  mod.rs  op.rs
source2-demo/src/string_table/: container.rs  mod.rs  row.rs  string_table.rs
src/: bit_reader.rs  class.rs  combat_log.rs  decoder.rs  demo.rs  entities.rs  entitiy.rs  entity.rs  field.rs  field_decoder.rs  field_op.rs  field_patch.rs  field_path.rs  field_reader.rs  field_state.rs  field_type.rs  huffman_tree.rs  lib.rs  main.rs  operation.rs  parser.rs  qfloat.rs  quantized_float.rs  reader.rs  serializer.rs  string_table.rs
src/utils/: huffman_tree.rs  mod.rs  quantized_float.rs
