[workspace]
members = [
    "source2-demo",
    "source2-demo-protobufs",
    "source2-demo-macros",
    #    "dl-examples",
    #    "d2-stampede",
    #    "d2-stampede-observers",
    #    "d2-stampede-examples/*",
]

resolver = "2"

[profile.dev]
opt-level = 2

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"

