[package]
name = "d2-stampede-macros"
description = "Procedural macros for d2-stampede"
version = "0.1.0"
repository = "https://github.com/Rupas1k/d2-stampede"
authors = ["Artem Rupasov <artemrupasov125@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
d2-stampede-protobufs = { version = "0.2.0", path = "../d2-stampede-protobufs" }
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"