[package]
name = "d2-stampede-observers"
description = ""
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
d2-stampede = { git = "https://github.com/Rupas1k/d2-stampede" }
hashbrown = "0.14.5"
anyhow = "1"