[package]
name = "d2-stampede-protobufs"
description = "Dota 2 Protobufs"
version = "0.1.0"
edition = "2021"
authors = [
    "Artem Rupasov <artemrupasov125@gmail.com>"
]
license = "MIT OR Apache-2.0"
build = "build.rs"
exclude = ["protos/*"]

[lib]
path = "./lib.rs"

[build-dependencies]
prost-build = "0.12.3"

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
prost = { version = "0.12.3" }