[package]
name = "d2-stampede"
description = "Dota 2 replay parser written in Rust"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Rupas1k/d2-stampede"
authors = [
    "Artem Rupasov <artemrupasov125@gmail.com>"
]
license = "MIT OR Apache-2.0"
readme = "../README.md"

[lib]
path = "src/lib.rs"

[dependencies]
d2-stampede-protobufs = { path = "../d2-stampede-protobufs", version = "0.1.0" }

snap = "1.1.1"
regex = { version = "1.10.4", features = ["std", "unicode-perl"], default-features = false }
bitter = "0.7.0"
hashbrown = "0.14.5"
lazy_static = "1.4.0"
anyhow = "1.0.86"
prettytable-rs = "0.10.0"
libmimalloc-sys = "=0.1.35"
mimalloc = { version = "=0.1.39", default-features = false, optional = true }

[features]
default = ["mimalloc"]
