[package]
name = "d2-stampede"
description = "Dota 2 replay parser written in Rust"
version = "0.1.0"
repository = "https://github.com/Rupas1k/d2-stampede"
authors = ["Artem Rupasov <artemrupasov125@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
categories = ["parsing"]
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
d2-stampede-protobufs = { git = "https://github.com/Rupas1k/d2-stampede" }

snap = "1.1"
bitter = "0.7"
hashbrown = "0.14"
thiserror = "1"
anyhow = "1"
prettytable-rs = { version = "0.10", default-features = false }
mimalloc = { version = "0.1", default-features = false, optional = true }

[features]
default = ["mimalloc"]