[package]
name = "d2-stampede"
description = "Dota 2 replay parser written in Rust"
version = "0.1.0"
repository = "https://github.com/Rupas1k/d2-stampede"
authors = ["Artem Rupasov <artemrupasov125@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
categories = ["parsing"]
keywords = ["dota", "dota2", "replay", "demo", "parser"]
edition = "2021"

[dependencies]
d2-stampede-protobufs = { version = "0.1", path = "../d2-stampede-protobufs" }
snap = "1.1"
bitter = "0.7"
hashbrown = "0.14"
thiserror = "1.0"
anyhow = "1.0"
prettytable-rs = { version = "0.10", default-features = false }
mimalloc = { version = "0.1", optional = true }

[features]
default = ["mimalloc"]