[package]
name = "source2-demo-macros"
description = "Procedural macros for Source 2 replay parser"
repository = "https://github.com/Rupas1k/source2-demo"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[features]
dota = []
citadel = []
