[package]
name = "combatlog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bench = []

[dependencies]
d2-stampede = { git = "https://github.com/Rupas1k/d2-stampede", features = ["mimalloc"] }
memmap2 = "0.9.4"
