[package]
name = "wards"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bench = []

[dependencies]
d2-stampede = { path = "../../../d2-stampede", features = ["mimalloc"] }
d2-stampede-observers = { path = "../../../d2-stampede-observers" }
memmap2 = "0.9.4"
anyhow = "1.0.81"
hashbrown = "0.14.5"